--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   mongo:
-    image: mongo:8
+    image: mongo
     container_name: mongo
     ports:
       - "${MONGO_PORT}:27017"
